--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.13.0)
 project(wintypes LANGUAGES C CXX)
 
 add_library("wintypes" STATIC)
-target_compile_features("wintypes" PRIVATE cxx_std_20)
+target_compile_features("wintypes" PUBLIC cxx_std_20)
 
-target_include_directories("wintypes" PRIVATE
+target_include_directories("wintypes" PUBLIC
     "include"
 )
 
-target_sources("wintypes" PRIVATE
+target_sources("wintypes" PUBLIC
     "source/LightMutex.cpp"
     "source/NamedMutex.cpp"
     "source/NamedResource.cpp"
